Bug 31289 - --fatal-warnings doesn't work for command-line options
Summary: --fatal-warnings doesn't work for command-line options
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.43 (HEAD)
: P2 normal
Target Milestone: 2.43
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-24 16:05 UTC by H.J. Lu
Modified: 2024-01-26 15:32 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2024-01-24 16:05:32 UTC
For example:

    $ ld.bfd -z bad-option --fatal-warnings -e 0/dev/null
    ld.bfd: warning: -z bad-option ignored
    $ echo $?
    0

ie the warning about the ignored option is not being treated as an
error.  This happens because the --fatal-warnings option only takes
affect after it has been processed, and we process the options in a
linear order.  So the following works:

    $ ld.bfd --fatal-warnings -z bad-option -e 0 /dev/null
    ld.bfd: warning: -z bad-option ignored
    $ echo $?
    1

This behaviour differs from gold and lld, both of which honour
--fatal-warnings no matter where it occurs on the command line.
Comment 1 H.J. Lu 2024-01-24 22:28:56 UTC
Also it looks strange:

    $ ld.bfd --fatal-warnings -z bad-option -e 0 /dev/null
    ld.bfd: warning: -z bad-option ignored
    $ echo $?
    1

Why do we say "warning: -z bad-option ignored" when it is an error.
Comment 2 Sourceware Commits 2024-01-25 13:46:45 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=3eb33b8875a032678c375a76f689f928f57dfb15

commit 3eb33b8875a032678c375a76f689f928f57dfb15
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Wed Jan 24 13:53:11 2024 -0800

    ld: Improve --fatal-warnings for unknown command-line options
    
    There are 2 problems with --fatal-warnings for unknown command-line
    options:
    
    1. --fatal-warnings doesn't trigger an error for an unknown command-line
    option when --fatal-warnings is the last command-line option.
    2. When --fatal-warnings triggers an error for an unknown command-line
    option, the message says that the unknown command-line option is ignored.
    
    This patch queues unknown command-line option warnings and outputs queued
    command-line option warnings after all command-line options have been
    processed so that --fatal-warnings can work for unknown command-line
    options regardless of the order of --fatal-warnings.
    
    When --fatal-warnings is used, the linker message is changed from
    
    ld: warning: -z bad-option ignored
    
    to
    
    ld: error: unsupported option: -z bad-option
    
    The above also applies to "-z dynamic-undefined-weak" when the known
    "-z dynamic-undefined-weak" option is ignored.
    
            PR ld/31289
            * ldelf.c (ldelf_after_parse): Use queue_unknown_cmdline_warning
            to warn the ignored -z dynamic-undefined-weak option.
            * ldmain.c (main): Call output_unknown_cmdline_warnings after
            calling ldemul_after_parse.
            * ldmisc.c (CMDLINE_WARNING_SIZE): New.
            (cmdline_warning_list): Likewise.
            (cmdline_warning_head): Likewise.
            (cmdline_warning_tail): Likewise.
            (queue_unknown_cmdline_warning): Likewise.
            (output_unknown_cmdline_warnings): Likewise.
            * ldmisc.h (queue_unknown_cmdline_warning): Likewise.
            (output_unknown_cmdline_warnings): Likewise.
            * emultempl/elf.em (gld${EMULATION_NAME}_handle_option): Use
            queue_unknown_cmdline_warning to warn unknown -z option.
            * testsuite/ld-elf/fatal-warnings-1a.d: New file.
            * testsuite/ld-elf/fatal-warnings-1b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-2a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-2b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4b.d: Likewise.
Comment 3 H.J. Lu 2024-01-25 13:47:43 UTC
Fixed for 2.43.
Comment 4 Sourceware Commits 2024-01-25 17:26:58 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=624c610dd46ed441c349f4bd889f3416cf867fd5

commit 624c610dd46ed441c349f4bd889f3416cf867fd5
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Thu Jan 25 07:39:05 2024 -0800

    ld: Always call output_unknown_cmdline_warning
    
    Call output_unknown_cmdline_warning if there are no input files so that
    
    $ ld -z bad-option
    
    reports
    
    ld: warning: -z bad-option ignored
    ld: no input files
    
    instead of
    
    ld: no input files
    
            PR ld/31289
            * ldmain.c (main): Call output_unknown_cmdline_warning if there
            are no input files.
Comment 5 Sourceware Commits 2024-01-25 18:28:08 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=eb12b17047e25eac70ba32b79144216e86d3baa4

commit eb12b17047e25eac70ba32b79144216e86d3baa4
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Thu Jan 25 10:08:04 2024 -0800

    elf: Add is_standard_elf
    
    PR ld/31289 tests failed for fr30-elf, frv-elf, ft32-elf, iq2000-elf,
    mn10200-elf, ms1-elf and msp430-elf targets:
    
    FAIL: ld-elf/fatal-warnings-2a
    FAIL: ld-elf/fatal-warnings-2b
    FAIL: ld-elf/fatal-warnings-3a
    FAIL: ld-elf/fatal-warnings-3b
    FAIL: ld-elf/fatal-warnings-4a
    FAIL: ld-elf/fatal-warnings-4b
    
    even though PR ld/31289 targets xfail for [is_generic] targets.  These
    targets not only don't use the generic_link_hash_table linker, but also
    don't use the standard ELF emulation.  Add is_standard_elf for ELF
    targets which use the standard ELF emulation and replace [is_generic]
    with ![is_standard_elf] in PR ld/31289 tests.
    
    binutils/
    
            PR ld/31289
            * testsuite/lib/binutils-common.exp (is_standard_elf): New.
    
    ld/
    
            PR ld/31289
            * testsuite/lib/binutils-common.exp (is_generic): Return 1 for
            fr30-*-*, frv-*-elf, ft32-*-*, iq2000-*-*, mn10200-*-*,
            moxie-*-moxiebox*, msp430-*-* and mt-*-*.
            * testsuite/ld-elf/fatal-warnings-2a.d: Replace [is_generic]
            with ![is_standard_elf].
            * testsuite/ld-elf/fatal-warnings-2b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4b.d: Likewise.
Comment 6 Sourceware Commits 2024-01-26 15:32:20 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=1b06334552f33015a6293571e9381d43dec3a5d3

commit 1b06334552f33015a6293571e9381d43dec3a5d3
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Fri Jan 26 05:56:08 2024 -0800

    elf: Rename is_standard_elf to uses_elf_em
    
    Rename is_standard_elf to uses_elf_em for targets which use elf.em.
    
    binutils/
    
            PR ld/31289
            * testsuite/lib/binutils-common.exp (is_standard_elf): Renamed
            to ...
            (uses_elf_em): This.
    
    ld/
    
            PR ld/31289
            * testsuite/ld-elf/fatal-warnings-2a.d: Replace is_standard_elf
            with uses_elf_em.
            * testsuite/ld-elf/fatal-warnings-2b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-3b.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4a.d: Likewise.
            * testsuite/ld-elf/fatal-warnings-4b.d: Likewise.